--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ a {
     width: 100%;
     height: auto;
     padding: 2.5rem;
-    padding-bottom: 20px;
+    padding-bottom: 1.25rem;
 }
 
 .third_title {
@@ -134,7 +134,7 @@ a {
 .fourth_section {
     width: 100%;
     height: auto;
-    padding: 35px 28px 37px 28px;
+    padding: 2.1875rem 1.75rem 2.3125rem 1.75rem;
     background-color: #F8F8F8;
 }
 
@@ -192,7 +192,7 @@ a {
 
 .fourth_imges_sp img {
     width: 100%;
-    max-width: 619px;
+    max-width: 38.6875rem;
 }
 
 .fourth_imges_pc {
@@ -210,18 +210,18 @@ a {
     font-size: clamp(1rem, 4vw, 1.5rem);
     font-weight: 600;
     color: #FF0D4F;
-    border: 2px solid #000; /* 枠線の太さ・種類・色 */
-    padding: 1rem; /* 内側の余白 */
-    border-radius: 21px; /* 角を少し丸める */
+    border: 0.125rem solid #000;
+    padding: 1rem;
+    border-radius: 1.3125rem;
 }
 
 .fourth_comment img {
     width: 48vw;
-    max-width: 201px;
+    max-width: 12.5625rem;
     height: auto;
     position: absolute;
-    right: -40px;
-    transform: translateY(30px);
+    right: -2.5rem;
+    transform: translateY(1.875rem);
 }
 
 .fifth_section {
@@ -239,24 +239,171 @@ a {
 
 .fifth_belt img {
     width: 100%;
-    height: 221px;
+    height: 13.8125rem;
 }
 
 .fith_title {
     position: absolute;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 600;
     color: #FFFFFF;
-    transform: translateY(-40px);
-    margin: 0 25px 0 25px;
+    transform: translateY(-2.5rem);
+    margin: 0 1.5625rem 0 1.5625rem;
 }
 
 .fifth_btn {
-    transform: translateY(50px);
+    transform: translateY(3.125rem);
 }
 
 .sp_break_52 {
     display: block;
+}
+
+.sixth_section {
+    width: 100%;
+    height: auto;
+    padding: 2.3rem 1rem 0 1rem;
+}
+
+.sixth_title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.sixth_title_letter {
+    display: inline-block;
+    margin: 1.25rem 0;
+    font-size: clamp(1.5625rem, 5vw, 2.81rem);
+    font-weight: 800;
+}
+
+.sixth_contents {
+    background-color: rgba(8, 129, 147, 0.1);
+    border-radius: 3.125rem;
+    padding: 5vw;
+    padding-bottom: 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 1.875rem;
+}
+
+.sixth_contents p {
+    font-size: clamp(1rem, 3vw, 1.75rem);
+    font-weight: 500;
+    color: #000000;
+    margin: 2rem 0 2rem 0;
+    line-height: 28px;
+}
+
+.sixth_img_sp {
+    width: 100%;
+    height: auto;
+}
+
+.sp_break_61 {
+    display: block;
+}
+
+.sp_break_612 {
+    display: block;
+}
+
+.sp_break_62 {
+    display: block;       
+}
+
+.sp_break_63 {
+    display: block;
+}
+
+.sp_break_631 {
+    display: block;
+}
+
+.sixth_img_pc {
+    display: none;
+}
+
+.sixth_discription {
+    border: 0.125rem solid #000;
+    border-radius: 1.3125rem;
+    text-align: center;
+    padding: 14px 27px 13px 24px;
+    margin: 20px;
+    margin-bottom: 17px;
+    position: relative;
+}
+
+.sixth_discription_title {
+    font-size: clamp(1rem, 2.8vw, 1.75rem);
+    font-family: "源ノ角ゴシック JP";
+    line-height: 22px;
+    font-weight: 500;
+}
+
+.sixth_discription_detail {
+    color: #FF0D4F;
+    font-size: clamp(1.125rem, 3vw, 2rem);   line-height: 30px;
+    transform: translateX(2.5rem);
+    font-weight: medium;
+}
+
+.sixth_highlight {
+    font-size: clamp(1.375rem, 3vw, 2rem);
+}
+
+.sixth_discription img {
+    width: 15.3125rem;
+    position: absolute;
+    right: 53%;
+    transform: translateY(-6.8rem);
+}
+
+.seventh_section {
+    width: 100%;
+    height: auto;
+    padding: 0 1rem 1rem 1rem;
+}
+
+.seventh_title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.seventth_title_letter {
+    display: inline-block;
+    margin: 1.25rem 0;
+    font-size: clamp(1.5625rem, 5vw, 2.81rem);
+    font-weight: 800;
+}
+
+.seventh_contents {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.seventh_img_sp {
+    width: 100%;
+    height: auto;
+    margin-top: 30px;
+}
+
+.seventh_img_pc {
+    display: none;
+}
+
+.seventh_img_arrow {
+    width: 110%;
+    margin-bottom: 25px;
 }
 
 
@@ -270,7 +417,7 @@ a {
     }
 
     .fourth_comment {
-        padding-right: 20px;
+        padding-right: 1.25rem;
     }
 }
 
@@ -324,20 +471,20 @@ a {
     }
 
     .fourth_comment p {
-        padding: 18px 44px 24px 24px;
+        padding: 1.125rem 2.75rem 1.5rem 1.5rem;
     }
 
     .fourth_comment img {
-        width: 330px;
-        max-width: 330px;
+        width: 20.625rem;
+        max-width: 20.625rem;
         right: auto;
         left: 50%;
-        transform: translate(160px, -30px);
+        transform: translate(10rem, -1.875rem);
     }
 
     .fifth_belt img {
         width: 100%;
-        height: clamp(221px ,27vw ,319px);
+        height: clamp(13.8125rem, 27vw, 19.9375rem);
     }
 
     .fith_title p {
@@ -351,6 +498,77 @@ a {
     .sp_break_52 {
         display: none;
     }
+
+    .sixth_section {
+        padding: 60px 40px 0 40px;
+    }
+    
+    
+    .sixth_contents {
+        margin-top: clamp(30px, 7vw, 64px);
+    }   
+    
+    .sixth_img_sp {
+        display: none;
+    }
+    
+    .sixth_img_pc {
+        display: block;
+    }
+    
+
+    .sp_break_612 {
+        display: none;
+    }
+    
+    .sixth_discription {
+        padding: 25px 10px 25px 50px;
+        margin-bottom: 11px;
+    }
+    
+    .sixth_discription_title {
+        margin-bottom: clamp(0.4rem, 2vw, 1rem);
+    }
+    
+    .sp_break_62 {
+        display: none;
+    }
+    
+    .sixth_discription_detail {
+        transform: translateX(0);
+    }
+
+    .sp_break_63 {
+        display: none;
+    }
+    
+    .sixth_discription img {
+        width: 360px;
+        right: 50%;
+        left: -190px;
+        transform: translateY(-10.5rem);
+    }
+    
+    .seventh_section {
+        padding: 0 40px 0 40px;
+    }
+
+    .seventh_img_sp {
+        display: none;
+    }
+    
+    .seventh_img_pc {
+        display: block;
+        width: 100%;
+        height: auto;
+        margin-top: 58px;
+    }
+    
+    .seventh_img_arrow {
+        max-width: 404px;
+    }
+    
+    
 }
 
 @media screen and (min-width: 1000px) {
@@ -393,17 +611,16 @@ a {
     }
 
     .fourth_section {
-        padding: 100px 10vw 30px 10vw;
+        padding: 6.25rem 10vw 1.875rem 10vw;
     }
 
     .fourth_discription_title {
-        font-size: 30px;
+        font-size: 1.875rem;
     }
-
 
     .fourth_comment p {
         font-size: 2rem;
-        padding: 24px 59px 32px 33px;
+        padding: 1.5rem 3.6875rem 2rem 2.0625rem;
         white-space: nowrap;
     }
 
@@ -413,20 +630,72 @@ a {
 
     .fourth_comment img {
         width: 40vw;
-        max-width: 385px;
+        max-width: 24.0625rem;
         right: auto;
         left: 50%;
-        transform: translate(230px, -30px);
+        transform: translate(14.375rem, -1.875rem);
     }
     
     .fifth_btn {
-        transform: translateY(70px);
+        transform: translateY(4.375rem);
     }
 
     .fith_title p {
-        transform: translateY(-33px);
+        transform: translateY(-2.0625rem);
     }
 
+    .sixth_section {
+        padding: 64px 10vw 0 10vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .sixth_contents {
+        width: 100%;
+        max-width: 998px;
+        margin: 64px auto 0 auto;
+    }
+
+    .sixth_contents p {
+        line-height: 40px;
+    }
+    
+    .sixth_discription {
+        max-width: 920px;
+        margin: 20px auto 33px auto;
+        padding: 30px 70px 25px 110px;
+    }
+    
+    .sixth_discription_detail {
+        line-height: 50px;
+        font-weight: medium;
+    }
+    
+    .sixth_discription img {
+        width: 491px;
+        transform: translate(-3rem, -13.8rem);
+    }
+
+    .seventh_section {
+        padding: 0 10vw 0 10vw;
+    }  
+
+    .seventh_contents {
+        display: flex;
+        align-items: center;
+    }
+
+    .seventh_img_pc {
+        width: 100%;
+        max-width: 998px;
+    }
+    
+    .seventh_img_arrow {
+        margin-bottom: 0;
+    }
+    
+    
 }
 
 @media screen and (max-width: 400px) {
@@ -452,11 +721,11 @@ a {
     }
 
     .fourth_section {
-        padding: 20px;
+        padding: 1.25rem;
     }
     
     .fourth_title_letter {
-        font-size: 23px;
+        font-size: 1.4375rem;
     }
     
     .sp_break {
@@ -468,7 +737,7 @@ a {
     }
     
     .fourth_comment p {
-        padding-right: 30px;
+        padding-right: 1.875rem;
     }
     
     .fith_title p {
@@ -478,14 +747,39 @@ a {
     .sp_break_52 {
         display: none;
     }
+
+    .sixth_title_letter {
+        font-size: 1.3rem;
+    }
+
+    .sixth_discription {
+        padding: 11.2px 18.6px 10.4px 15.2px;
+    }
+
+    .sp_break_62 {
+        display: none;
+    }
+
+    .sp_break_63 {
+        display: block;
+    }
+    
+    .sixth_discription_detail {
+        transform: translateX(2.2rem);
+    }
+
+    .sixth_discription img {
+        right: 49%;
+        transform: translateY(-6.8rem);
+    }
 }
 
 @media screen and (max-width: 330px) {
     .fourth_comment p {
-        padding-right: 20px;
+        padding-right: 1.25rem;
     }
 
     .fourth_comment img {
-        transform: translateY(38px);
+        transform: translateY(2.375rem);
     }
 }
