--- a/style.css
+++ b/style.css
@@ -619,22 +619,15 @@ a {
     margin: 21px 0 16px 0;
 }
 
-.tenth_person {
-    width: 100%;
-    height: auto;
-    background-color: #FFFFFF;
-    border-radius: 44px;
-    padding: 17px 19px;
-    margin: 0.5rem 0;
-}
-
+.tenth_person,
+.tenth_person_0,
 .tenth_person_1 {
     width: 100%;
     height: auto;
     background-color: #FFFFFF;
     border-radius: 44px;
     padding: 17px 19px;
-    margin: 0.5rem 0;
+    margin: 0;
 }
 
 .tenth_name {
@@ -646,18 +639,19 @@ a {
 
 .tenth_name p {
     color: #088193;
-    font-size: 25px;
+    font-size: clamp(25px, 1.739vw + 17.61px, 35px);
     font-weight: bold;
     line-height: 27px;
 }
 
 .tenth_name span {
-    font-size: 1rem;
+    font-size: clamp(16px, 0.696vw + 13.04px, 20px);
 }
 
-.tenth_person img {
+.tenth_person_0 img {
     width: 70%;
     min-width: 260px;
+    max-width: 361px;
 }
 
 .tenth_text {
@@ -679,7 +673,7 @@ a {
     display: inline-block;
     background-color: #088193;
     padding: 3px 1rem;
-    margin: 1rem 0 0.5rem 0;
+    margin: 1.2rem 0 0.7rem 0;
 }
 
 .tenth_subtitle p {
@@ -688,7 +682,7 @@ a {
 }
 
 .tenth_link {
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 .tenth_img {
@@ -697,7 +691,10 @@ a {
 }
 
 .tenth_right_sp {
-    width: 49%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
 }
 
 .tenth_right_pc {
@@ -931,64 +928,48 @@ a {
     }
 
     .tenth_section {
-
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 30px 2.5rem 0 2.5rem;
     }
     
     .tenth_title {
-    
+        width: 100%;
     }
     
     .title_line {
-    
-    }
-    
-    .tenth_title_letter {
-    
+        width: 100%;
     }
     
     .tenth_discription {
-        gap: 0.5rem;
+        gap: 0.8rem;
+        max-width: 1066px;
+    }
+
+    .tenth_person_0,
+    .tenth_person_1 {
+        padding: 40px 47px;
     }
     
     .tenth_person {
         max-width: 526px;
         width: 100%;
         margin: 0;
+        padding: 19px 55px;
     }
     
     .tenth_name {
-    
-    }
-    
-    .tenth_text {
-    
-    }
-    
-    .sp_break_10 {
-    
-    }
-    
-    .sp_space_10 {
-    
-    }
-    
-    .tenth_subtitle {
-    
-    }
-    
-    .tenth_link {
-    
-    }
-    
-    .tenth_subtext {
-    
-    }
-    
-    .tenth_img {
-    
+        margin: 0 0 1rem 0;
+        text-align: left;
+        justify-content: left;
     }
 
-    .tenth_person:first-child {
+    .tenth_name name {
+        line-height: 20px;
+    }
+    
+    .tenth_person_0 {
         width: 49%;
     }
     
@@ -997,7 +978,22 @@ a {
         width: 100%;
         margin: 0;
     }
+
+    .tenth_subtitle {
+        margin: 42px 0 18px 0;
+    }
     
+    .tenth_right_sp {
+        display: none;
+    }
+
+    .tenth_right_pc {
+        display: block;
+        width: 49%;
+        display: flex;
+        flex-direction: column;
+        gap: 11px;
+    }
 }
 
 @media screen and (min-width: 1000px) {
@@ -1150,7 +1146,26 @@ a {
         box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
     }
     
-    
+    .tenth_section {
+        padding: 30px 10vw;
+    }
+
+    .tenth_person,
+    .tenth_person_1 {
+        padding: 20px 55px;
+    }
+
+    .tenth_text {
+        font-size: 1rem;
+    }
+
+    .sp_space_10 {
+        margin: 2rem;
+    }
+
+    .sp_space_101 {
+        margin: 1rem;
+    }
 }
 
 @media screen and (max-width: 400px) {
