--- a/style.css
+++ b/style.css
@@ -121,12 +121,14 @@ a {
     font-size: 1.375rem;
     font-weight: 700;
     margin: 0.625rem 0;
+    font-family: "Noto Sans JP";
 }
 
 .third_block_detail {
     text-align: left;
     font-size: 1rem;
     font-weight: 500;
+    font-family: "Noto Sans JP";
 }
 
 .tihrd_partition {
@@ -170,6 +172,7 @@ a {
     margin: 1.25rem 0;
     font-size: clamp(1.2rem, 3vw, 1.6rem);
     font-weight: 700;
+    font-family: "Noto Sans JP";
 }
 
 .sp_break {
@@ -188,6 +191,7 @@ a {
     font-size: clamp(1rem, 2.5vw, 1.25rem);
     font-weight: 540;
     margin-bottom: 0.5rem;
+    font-family: "Noto Sans JP";
 }
 
 .fourth_imges_sp {
@@ -220,6 +224,7 @@ a {
     border: 0.125rem solid #000;
     padding: 1rem;
     border-radius: 1.3125rem;
+    font-family: "Noto Sans JP";
 }
 
 .fourth_comment img {
@@ -253,6 +258,7 @@ a {
     position: absolute;
     font-size: 1.125rem;
     font-weight: 600;
+    font-family: "Noto Sans JP";
     color: #FFFFFF;
     transform: translateY(-2.5rem);
     margin: 0 1.5625rem 0 1.5625rem;
@@ -306,6 +312,7 @@ a {
     color: #000000;
     margin: 2rem 0 2rem 0;
     line-height: 1.75rem;
+    font-family: "Noto Sans JP";
 }
 
 .sixth_img_sp {
@@ -634,6 +641,10 @@ a {
     border-radius: 2.75rem;
     padding: 1.0625rem 1.1875rem;
     margin: 0;
+}
+
+.tenth_person_1 {
+    margin-top: 0.6875rem;
 }
 
 .tenth_name {
